--- a/stylesheets/Blog.module.sass
+++ b/stylesheets/Blog.module.sass
@@ -31,6 +31,7 @@
   margin-right: auto
   padding-left: 15px
   padding-right: 15px
+  color: var(--primary-text-color)
   +screen(small)
     padding-top: 30px
 
